languages/bevy_mod_scripting_lua_derive/tests/fail/invalid-function-type.stderr
error: Invalid Function Type, expected one of: Function, MetaFunction, Method, MetaMethod, MutableFunction, MutableMetaFunction, MutatingMethod, MutatingMetaMethod
 --> tests/fail/invalid-function-type.rs:7:11
  |
7 |     #[lua(AMASJDIASDKAW)]
  |           ^^^^^^^^^^^^^
